# WalletCoinfluence

./: .env.example  .gitignore  ADAPTIVE_WHALE_SYSTEM.md  ALCHEMY_FIX_REPORT.md  ALPHA_WALLET_SCOUT_DECK.html  ALPHA_WALLET_SCOUT_DECK.md  CHANGELOG.md  CRITICAL_FIXES_COMPLETE.md  CUSTOM_WATCHLIST_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile.api  Dockerfile.worker  EXIT_STRATEGIES.md  EXPANDED_STRATEGY.md  FINAL_SYSTEM_SUMMARY.md  GET_API_KEYS.md  IMPROVEMENT_STRATEGY.md  INVESTOR_DECK.html  INVESTOR_DECK.md  LEARNING_PHASE.md  MVP_REVIEW_AND_NEXT_STEPS.md  Makefile  NEW_FEATURES_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.sh  README.md  SAAS_IMPROVEMENT_ROADMAP.md  SOLANA_IMPLEMENTATION_PLAN.md  SYSTEM_GOAL_AND_DESIGN.md  SYSTEM_OVERVIEW.md  SYSTEM_STATUS.md  SYSTEM_STATUS_REPORT.md  THIRD_PARTY_AUDIT_REPORT.md  TOOLS_GUIDE.md  TRADING_DISCIPLINE.md  TRIAGE_CRITICAL_FIXES.md  USAGE.md  WHALE_ANALYSIS.md  WHALE_UPGRADE_REPORT.md  alembic.ini  (+17 more)
alembic/: env.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/: __init__.py  config.py
src/alerts/: __init__.py  confluence.py  telegram.py  telegram_bot.py
src/analytics/: __init__.py  botfilter.py  early.py  llm_analyzer.py  llm_service.py  outcomes.py  paper_trading.py  performance_tracker.py  pnl.py
src/api/: __init__.py  app.py  main.py  routes.py  schemas.py  watchlist.py
src/clients/: __init__.py  alchemy.py  base.py  birdeye.py  coingecko.py  defined.py  dexscreener.py  dextools.py  geckoterminal.py  gmgn.py  helius.py  honeypot.py  jupiter.py  mock_blockchain.py  (+3 more)
(+46 files in other folders)
